--- a/plot.ipynb
+++ b/plot.ipynb
@@ -181,6 +181,70 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/mlv/datasets/DataCIFAR10/CIFAR10Tst.mat\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy import io\n",
+    "\n",
+    "data_dir = '/home/mlv/datasets/DataCIFAR10/'\n",
+    "mat_name = 'CIFAR10Tst.mat'\n",
+    "mat_path = os.path.join(data_dir, mat_name)\n",
+    "\n",
+    "print(mat_path)\n",
+    "\n",
+    "mat = io.loadmat(mat_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[7.7230728e-01, 1.6784039e+00, 5.1893508e-01, ..., 2.5059596e-01,\n",
+       "        1.9575867e-01, 3.0345824e-01],\n",
+       "       [1.6153313e-01, 1.1004754e+00, 0.0000000e+00, ..., 4.9930137e-01,\n",
+       "        1.1810928e-02, 1.5565443e+00],\n",
+       "       [2.3080207e-01, 1.2468910e+00, 3.1930227e-02, ..., 6.2892365e-01,\n",
+       "        4.3062490e-01, 8.3929986e-01],\n",
+       "       ...,\n",
+       "       [6.4489245e-02, 0.0000000e+00, 0.0000000e+00, ..., 6.8715560e-01,\n",
+       "        1.0607891e-01, 9.7746486e-03],\n",
+       "       [0.0000000e+00, 3.8922694e-01, 5.4369473e-01, ..., 4.3592361e-01,\n",
+       "        2.7539778e-05, 8.4132111e-01],\n",
+       "       [4.9628377e-01, 1.0073239e+00, 0.0000000e+00, ..., 5.4426020e-01,\n",
+       "        3.0575488e-02, 1.3413514e+00]], dtype=float32)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat['Tst'][0][0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
